# tic_tac_toe

./: CMakeLists.txt  README.md  todo.md
src/: board.cpp  board.hpp  main.cpp  mark.hpp  player.cpp  player.hpp
